padronizacao de testes de integracao